--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,4 +1,12 @@
-# the following configuration items require rust nightly
+# configuration for https://rust-lang.github.io/rustfmt/
+
+use_field_init_shorthand = true
+
+# unstable options
 comment_width = 100
-wrap_comments = true
 format_code_in_doc_comments = true
+format_macro_matchers = true
+group_imports = "StdExternalCrate"
+imports_granularity = "Module"
+normalize_doc_attributes = true
+wrap_comments = true
