--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ portable-atomic = ["dep:portable-atomic", "dep:portable-atomic-util"]
 
 [dependencies]
 hashbrown = "0.15"
-portable-atomic = { version = "1.11", optional = true }
+portable-atomic = { version = "1.11",  default-features = false, features = ["require-cas"], optional = true }
 portable-atomic-util = { version = "0.2.4", features = ["alloc"], optional = true }
 thiserror = { version = "2.0", default-features = false }
 
