--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,29 +10,36 @@ permissions:
   contents: read
 
 jobs:
-  ci:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - name: std
+            target: x86_64-unknown-linux-gnu
+            args: ""
+          - name: no_std (thumbv7em)
+            target: thumbv7em-none-eabi
+            args: "--no-default-features"
+          - name: no_std (riscv32 + portable-atomic)
+            target: riscv32imc-unknown-none-elf
+            args: "--no-default-features --features portable-atomic,portable-atomic/unsafe-assume-single-core"
+
+    name: ${{ matrix.name }}
     steps:
       - uses: actions/checkout@v5
-      - uses: dtolnay/rust-toolchain@stable
-      - run: cargo build
-      - run: cargo test
-  ci-nostd:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
+
       - uses: dtolnay/rust-toolchain@stable
         with:
-          target: thumbv7em-none-eabi
-      - run: cargo build --target thumbv7em-none-eabi --no-default-features
-  ci-nostd-portableatomic:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          target: riscv32imc-unknown-none-elf
-      - run: cargo build --target riscv32imc-unknown-none-elf --no-default-features --features portable-atomic,portable-atomic/unsafe-assume-single-core
+          target: ${{ matrix.target }}
+
+      - name: Build
+        run: cargo build --target ${{ matrix.target }} ${{ matrix.args }}
+
+      - name: Test
+        if: matrix.target == 'x86_64-unknown-linux-gnu'
+        run: cargo test
   clippy:
     runs-on: ubuntu-latest
     steps:
