--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,18 +11,29 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         include:
-          - name: std
+          - name: std (windows)
+            os: windows-2022
+            target: x86_64-pc-windows-msvc
+            args: ""
+          - name: std (macos)
+            os: macos-latest
+            target: x86_64-apple-darwin
+            args: ""
+          - name: std (linux)
+            os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             args: ""
           - name: no_std (thumbv7em)
+            os: ubuntu-latest
             target: thumbv7em-none-eabi
             args: "--no-default-features"
           - name: no_std (riscv32 + portable-atomic)
+            os: ubuntu-latest
             target: riscv32imc-unknown-none-elf
             args: "--no-default-features --features portable-atomic,portable-atomic/unsafe-assume-single-core"
 
@@ -38,8 +49,8 @@ jobs:
         run: cargo build --target ${{ matrix.target }} ${{ matrix.args }}
 
       - name: Test
-        if: matrix.target == 'x86_64-unknown-linux-gnu'
-        run: cargo test
+        if: matrix.target != 'thumbv7em-none-eabi' && matrix.target != 'riscv32imc-unknown-none-elf'
+        run: cargo test --target ${{ matrix.target }}
   clippy:
     runs-on: ubuntu-latest
     steps:
