--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -1,31 +1,52 @@
-# see https://release-plz.ieni.dev/docs/github for more information
-
 name: Release-plz
-
-permissions:
-  pull-requests: write
-  contents: write
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   workflow_dispatch:
 
 jobs:
-  release-plz:
-    name: Release-plz
+  release:
+    name: Release-plz release
+    if: ${{ github.repository_owner == 'ratatui' }}
     runs-on: ubuntu-latest
-    if: ${{ github.repository == 'ratatui/kasuari' }}
+    environment: release
+    permissions:
+      contents: write
+      id-token: write
+    steps:
+      - &checkout
+        name: Checkout repository
+        uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+      - &install-rust
+        name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+      - name: Run release-plz (release)
+        uses: release-plz/action@v0.5
+        with:
+          command: release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  release_pr:
+    name: Release-plz PR
+    if: ${{ github.repository_owner == 'ratatui' }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     concurrency:
       group: release-plz-${{ github.ref }}
       cancel-in-progress: false
     steps:
-      - uses: actions/checkout@v5
+      - *checkout
+      - *install-rust
+      - name: Run release-plz (release-pr)
+        uses: release-plz/action@v0.5
         with:
-          fetch-depth: 0
-      - uses: dtolnay/rust-toolchain@stable
-      - uses: release-plz/action@v0.5
+          command: release-pr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
